Fix github workflow (add pywaveletes dependency)
Signed-off-by: Nicola VIGANÒ <nicola.vigano@esrf.fr>

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -30,6 +30,7 @@ jobs:
         $CONDA/bin/conda update --all
         # Install corrct's dependencies
         $CONDA/bin/conda install astra-toolbox -c astra-toolbox/label/dev
+        $CONDA/bin/conda install pywavelets -c conda-forge
     - name: Lint with flake8
       run: |
         $CONDA/bin/conda install flake8
@@ -64,6 +65,7 @@ jobs:
         C:\Miniconda\condabin\conda.bat update --all
         # Install corrct's dependencies
         C:\Miniconda\condabin\conda.bat install astra-toolbox -c astra-toolbox/label/dev
+        C:\Miniconda\condabin\conda.bat install pywavelets -c conda-forge
     - name: Lint with flake8
       run: |
         # Activate the base environment
