--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -56,31 +56,44 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Setup conda
+      uses: s-weigand/setup-conda@v1
+      with:
+        update-conda: true
+        python-version: ${{ matrix.python-version }}
+        conda-channels: anaconda, conda-forge, astra-toolbox/label/dev
     - name: Install dependencies
       run: |
         # C:\Miniconda\condabin\conda.bat env update --file environment.yml --name test_env
-        C:\Miniconda\condabin\conda.bat config --set auto_activate_base false
-        C:\Miniconda\condabin\conda.bat init powershell
-        # Activate the test_env environment
-        C:\Miniconda\condabin\conda.bat create -n test_env python=${{ matrix.python-version }}
-        C:\Miniconda\condabin\conda.bat activate test_env
-        C:\Miniconda\condabin\conda.bat info --envs
-        C:\Miniconda\condabin\conda.bat update --all
+        # C:\Miniconda\condabin\conda.bat config --set auto_activate_base false
+        # C:\Miniconda\condabin\conda.bat init powershell
+        # # Activate the test_env environment
+        # C:\Miniconda\condabin\conda.bat create -n test_env python=${{ matrix.python-version }}
+        # C:\Miniconda\condabin\conda.bat activate test_env
+        conda activate base
         # Install corrct's dependencies
-        C:\Miniconda\condabin\conda.bat install astra-toolbox -c astra-toolbox/label/dev
-        C:\Miniconda\condabin\conda.bat install pywavelets -c conda-forge
+        conda install astra-toolbox
+        conda install pywavelets
+        # C:\Miniconda\condabin\conda.bat info --envs
+        # C:\Miniconda\condabin\conda.bat update --all
+        # # Install corrct's dependencies
+        # C:\Miniconda\condabin\conda.bat install astra-toolbox -c astra-toolbox/label/dev
+        # C:\Miniconda\condabin\conda.bat install pywavelets -c conda-forge
     - name: Lint with flake8
       run: |
-        # Activate the test_env environment
-        C:\Miniconda\condabin\conda.bat activate test_env
-        C:\Miniconda\condabin\conda.bat install flake8
+        # # Activate the test_env environment
+        # C:\Miniconda\condabin\conda.bat activate test_env
+        # C:\Miniconda\condabin\conda.bat install flake8
+        conda activate base
+        conda install flake8
         # stop the build if there are Python syntax errors or undefined names
         flake8 corrct tests examples --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 corrct tests examples --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        # Activate the test_env environment
-        C:\Miniconda\condabin\conda.bat activate test_env
-        C:\Miniconda\condabin\conda.bat install pytest
+        # # Activate the test_env environment
+        # C:\Miniconda\condabin\conda.bat activate test_env
+        # C:\Miniconda\condabin\conda.bat install pytest
+        conda install pytest
         pytest
