--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python Package using Anaconda
+name: Python package
 
 on:
   push:
@@ -11,10 +11,12 @@ on:
 
 jobs:
   build-linux:
-    runs-on: ubuntu-latest
+    runs-on:  ${{ matrix.os }}
+
     strategy:
       max-parallel: 3
       matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: [3.6, 3.7, 3.8]
 
     steps:
@@ -23,75 +25,17 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Add conda to system path
-      run: |
-        echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        # Install corrct's dependencies
-        # conda env update --file environment.yml --name base
-        # $CONDA/bin/conda install astra-toolbox -c astra-toolbox/label/dev
-        conda install scikit-image
-        conda install pywavelets -c conda-forge
+        python -m pip install --upgrade pip
+        python -m pip install flake8 pytest
+        pip install -r requirements.txt
     - name: Lint with flake8
       run: |
-        conda install flake8
         # stop the build if there are Python syntax errors or undefined names
         flake8 corrct tests examples --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 corrct tests examples --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        conda install pytest
-        pytest
-
-  build-windows:
-    runs-on: windows-latest
-    strategy:
-      max-parallel: 3
-      matrix:
-        python-version: [3.6, 3.7, 3.8]
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Setup conda
-      uses: s-weigand/setup-conda@v1
-      with:
-        update-conda: true
-        python-version: ${{ matrix.python-version }}
-        conda-channels: anaconda, conda-forge, astra-toolbox/label/dev
-    - name: Install dependencies
-      run: |
-        # C:\Miniconda\condabin\conda.bat env update --file environment.yml --name test_env
-        # C:\Miniconda\condabin\conda.bat config --set auto_activate_base false
-        # C:\Miniconda\condabin\conda.bat init powershell
-        # # Activate the test_env environment
-        # C:\Miniconda\condabin\conda.bat create -n test_env python=${{ matrix.python-version }}
-        # C:\Miniconda\condabin\conda.bat activate test_env
-        conda activate base
-        # Install corrct's dependencies
-        # conda install astra-toolbox
-        conda install scikit-image
-        conda install pywavelets
-    - name: Lint with flake8
-      run: |
-        # # Activate the test_env environment
-        # C:\Miniconda\condabin\conda.bat activate test_env
-        # C:\Miniconda\condabin\conda.bat install flake8
-        conda activate base
-        conda install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 corrct tests examples --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 corrct tests examples --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        # # Activate the test_env environment
-        # C:\Miniconda\condabin\conda.bat activate test_env
-        # C:\Miniconda\condabin\conda.bat install pytest
-        conda install pytest
         pytest
