--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -25,7 +25,7 @@ requirements:
         {% endfor %}
 
 about:
-    home: https://github.com/cicwi/corrct
+    home: https://github.com/cicwi/PyCorrectedEmissionCT
     license_file: LICENSE.md
     summary: "Physically corrected projectors for X-ray induced emission CT."
 
