Updated setup.py / setup.cfg
Signed-off-by: Nicola VIGANO <nicola.vigano@esrf.fr>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,57 @@
+[metadata]
+name = corrct
+version = file: corrct/VERSION
+url = https://github.com/cicwi/PyCorrectedEmissionCT
+author = Nicola VIGANÒ
+author_email = N.R.Vigano@cwi.nl
+classifiers =
+    Development Status :: 2 - Pre-Alpha
+    Intended Audience :: Developers
+    License :: OSI Approved :: BSD License
+    Natural Language :: English
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+description = Physically corrected projectors for X-ray induced emission CT.
+keywords = corrct, xrf-ct, xrd-ct, self-attenuation, attenuation correction
+license = BSD license
+long_description = file: README.md, CHANGELOG.md
+long_description_content_type = text/markdown
+
+[options]
+zip_safe = False
+include_package_data = True
+# package_dir =
+#     =src
+packages = corrct
+python_requires = >=3.7
+install_requires =
+    numpy>=1.20
+    scipy
+    tqdm
+    scikit-image
+    dataclasses
+    PyWavelets
+tests_require =
+    matplotlib
+
+[options.extras_require]
+dev =
+    rope
+    jedi
+    flake8
+    importmagic
+    autopep8
+    black
+    yapf
+    snakeviz
+    sphinx
+    sphinx_rtd_theme
+    recommonmark
+    watchdog
+    coverage
+
 [bdist_wheel]
 universal = 0
 
