Updated setup.cfg to require numpy 1.21, and fewer dependencies
Signed-off-by: Nicola VIGANO <nicola.vigano@esrf.fr>

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
 description = Physically corrected projectors for X-ray induced emission CT.
 keywords = corrct, xrf-ct, xrd-ct, self-attenuation, attenuation correction
 license = BSD license
@@ -27,28 +28,28 @@ include_package_data = True
 packages = corrct
 python_requires = >=3.7
 install_requires =
-    numpy>=1.20
+    numpy>=1.21
     scipy
     tqdm
     scikit-image
-    dataclasses
     PyWavelets
     matplotlib
+    # dataclasses
 
 [options.extras_require]
 dev =
-    rope
-    jedi
-    flake8
-    autopep8
-    black
-    yapf
-    snakeviz
     sphinx
     sphinx_rtd_theme
-    recommonmark
-    watchdog
-    coverage
+    # rope
+    # jedi
+    # flake8
+    # autopep8
+    # black
+    # yapf
+    # snakeviz
+    # recommonmark
+    # watchdog
+    # coverage
 
 [bdist_wheel]
 universal = 0
