--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ zip_safe = False
 include_package_data = True
 # package_dir =
 #     =src
-packages = corrct
+packages = find:
 python_requires = >=3.7
 install_requires =
     numpy>=1.21
@@ -35,6 +35,11 @@ install_requires =
     PyWavelets
     matplotlib
     # dataclasses
+
+[options.packages.find]
+include =
+    corrct
+    corrct.*
 
 [options.extras_require]
 dev =
