Updated packages, and first round of windows support (still not finalized)
Signed-off-by: Nicola VIGANÒ <nicola.vigano@cea.fr>

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -25,10 +25,10 @@ requirements:
         {% endfor %}
 
 about:
-    home: https://github.com/cicwi/PyCorrectedEmissionCT
+    home: {{ data['url'] }}
     license_file: LICENSE.md
-    summary: "Physically corrected projectors for X-ray induced emission CT."
+    summary: {{ data['description'] }}
 
 extra:
     maintainers:
-        - Nicola VIGANÒ
+        - Nicola VIGANO
