Fixed multi-platform building
Signed-off-by: Nicola VIGANÒ <nicola.vigano@esrf.fr>

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -11,6 +11,8 @@ source:
 
 build:
     number: '0'
+    script: "{{ PYTHON }} setup.py install --single-version-externally-managed --record record.txt || exit 1"
+    # script: "{{ PYTHON }} -m pip install --no-deps --ignore-installed . -vv || exit 1"
 
 requirements:
     build:
@@ -28,6 +30,7 @@ about:
     home: {{ data['url'] }}
     license_file: LICENSE.md
     summary: {{ data['description'] }}
+    doc_url: https://cicwi.github.io/PyCorrectedEmissionCT/
 
 extra:
     maintainers:
