--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -10,10 +10,12 @@ on:
     branches: [ master ]
 
 jobs:
-  package-lint-test:
-    runs-on:  ${{ matrix.os }}
+  build:
+    name: Build for (${{ matrix.python-version }}, ${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
 
     strategy:
+      fail-fast: false
       max-parallel: 3
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
@@ -25,9 +27,14 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Python info
+      shell: bash -e {0}
+      run: |
+        which python
+        python --version
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip setuptools build
         python -m pip install flake8 pytest
         python -m pip install -r requirements.txt
     - name: Lint with flake8
@@ -39,3 +46,5 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Verify that we can build the package
+      run: python -m build
