--- a/setup.cfg
+++ b/setup.cfg
@@ -47,5 +47,11 @@ universal = 0
 [flake8]
 exclude = docs, doc_sources
 
-[aliases]
-# Define setup.py command aliases here
+
+[isort]
+lines_after_imports = 2
+force_single_line = 1
+no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+known_first_party = noise2noise
+src_paths = noise2noise,tests
+line_length = 127
