--- a/setup.cfg
+++ b/setup.cfg
@@ -47,11 +47,10 @@ universal = 0
 [flake8]
 exclude = docs, doc_sources
 
-
 [isort]
 lines_after_imports = 2
 force_single_line = 1
 no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
-known_first_party = noise2noise
-src_paths = noise2noise,tests
+known_first_party = corrct
+src_paths = corrct,tests
 line_length = 127
