Fixed conda building for Python 3.12
Signed-off-by: Nicola VIGANO <nicola.vigano@esrf.fr>

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -11,8 +11,8 @@ source:
 
 build:
     number: '0'
-    script: "{{ PYTHON }} setup.py install --single-version-externally-managed --record record.txt || exit 1"
-    # script: "{{ PYTHON }} -m pip install --no-deps --ignore-installed . -vv || exit 1"
+    # script: "{{ PYTHON }} setup.py install --single-version-externally-managed --record record.txt || exit 1"
+    script: "{{ PYTHON }} -m pip install --no-deps --ignore-installed . -vv || exit 1"
 
 requirements:
     build:
