--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -41,9 +41,9 @@ jobs:
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 corrct tests examples --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 src/corrct tests examples --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 corrct tests examples --count --exit-zero --max-complexity=15 --max-line-length=127 --statistics
+        flake8 src/corrct tests examples --count --exit-zero --max-complexity=15 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
         pytest
