--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "corrct"
-version = "0.9.1"
+version = "1.0.0rc1"
 description = "Physically corrected projectors for X-ray induced emission CT."
 authors = [{name = "Nicola VIGANO", email = "nicola.vigano@cea.fr"}]
 license = {file = "LICENSE.md", content-type = "text/markdown"}
