Updated dependencies and fixed channel name
Signed-off-by: Nicola Vigano <nicola.vigano@esrf.fr>

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,14 +1,7 @@
-rope
-jedi
-flake8
-autopep8
+pylint
 black
-yapf
-snakeviz
-
 sphinx
 sphinx_rtd_theme
 recommonmark
-
-watchdog
-coverage
+isort
+pyupgrade
