--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ dependencies = [
     "tqdm",
     "matplotlib",
     "scikit-image",
+    "pywavelets",
+    "xraylib",
 ]
 
 [project.optional-dependencies]
@@ -51,10 +53,11 @@ dev = [
     "pytest-cov>=5.0",
     "pytest-randomly>=3.15",
     "pytest-xdist>=3.6",
-    "mypy>=1.10",
-    "types-markdown>=3.6",
-    "types-pyyaml>=6.0",
-    "flake8",
+    # "mypy>=1.10",
+    # "types-markdown>=3.6",
+    # "types-pyyaml>=6.0",
+    # "flake8",
+    "pylint",
 
     # docs
     "black>=24.4",
@@ -67,7 +70,9 @@ dev = [
     # "tomli>=2.0; python_version < '3.11'",
     "sphinx",
     "sphinx_rtd_theme",
+    "recommonmark",
 
+    # example data
     "pooch",
 ]
 
