Conda package: remove useless platform package building
Signed-off-by: Nicola VIGANÒ <nicola.vigano@cea.fr>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ dev = [
     "editables>=0.5",
 
     # maintenance
-    "build>=1.2",
+    "build>=1.2",  # called python-build under conda-forge
     "git-changelog>=2.4",
     "twine>=5.1; python_version < '3.13'",
 
