--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -10,6 +10,7 @@ source:
     path: ../
 
 build:
+    noarch: python
     number: '0'
     # script: "{{ PYTHON }} setup.py install --single-version-externally-managed --record record.txt || exit 1"
     script: "{{ PYTHON }} -m pip install --no-deps --ignore-installed . -vv || exit 1"
