Documentation: updated to myst, autodoc2, sphinx-design, and sphinx-copybutton
Signed-off-by: Nicola Vigano <nicola.vigano@cea.fr>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,11 @@ dev = [
     # "tomli>=2.0; python_version < '3.11'",
     "sphinx",
     "sphinx_rtd_theme",
-    "recommonmark",
+    # "recommonmark",
+    "myst-parser",
+    "sphinx-autodoc2",
+    "sphinx-design",
+    "sphinx-copybutton",
 
     # example data
     "pooch",
