--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "corrct"
 version = "1.0.0"
 description = "Physically corrected projectors for X-ray induced emission CT."
 authors = [{name = "Nicola VIGANO", email = "nicola.vigano@cea.fr"}]
-license = {file = "LICENSE.md", content-type = "text/markdown"}
+license = "BSD-3-Clause"
 readme = {file = "README.md", content-type = "text/markdown"}
 requires-python = ">=3.9"
 keywords = []
