pyproject.toml: Added license files
Signed-off-by: Nicola Vigano <nicola.vigano@cea.fr>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ version = "1.0.0"
 description = "Physically corrected projectors for X-ray induced emission CT."
 authors = [{name = "Nicola VIGANO", email = "nicola.vigano@cea.fr"}]
 license = "BSD-3-Clause"
+license-files = ["LICEN[CS]E*"]  # , "AUTHORS.md"
 readme = {file = "README.md", content-type = "text/markdown"}
 requires-python = ">=3.9"
 keywords = []
