--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools>=77.0.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -43,9 +43,9 @@ dev = [
     "editables>=0.5",
 
     # maintenance
-    "build>=1.2",  # called python-build under conda-forge
+    "build>=1.2.2",  # called python-build under conda-forge
     "git-changelog>=2.4",
-    "twine>=5.1; python_version < '3.13'",
+    "twine>=6.1",
 
     # ci
     "isort",
@@ -77,7 +77,7 @@ dev = [
     "sphinx-design",
     "sphinx-copybutton",
 
-    # example data
+    # example data of scikit-image
     "pooch",
 ]
 
