--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "corrct"
-version = "1.0.0"
+version = "1.1.0"
 description = "Physically corrected projectors for X-ray induced emission CT."
 authors = [{name = "Nicola VIGANO", email = "nicola.vigano@cea.fr"}]
 license = "BSD-3-Clause"
@@ -22,6 +22,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Documentation",
     "Topic :: Software Development",
     "Topic :: Utilities",
